# scooterbug_erpnext

./: .gitignore  BOOKINGZONE_README.md  INSTALLATION.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
bookingzone/: __init__.py  hooks.py  install.py  tasks.py
bookingzone/api/: __init__.py
bookingzone/doctype/bank_rule/: bank_rule.json  bank_rule.py
bookingzone/doctype/daily_sales_summary/: daily_sales_summary.json  daily_sales_summary.py
bookingzone/doctype/expense_receipt/: expense_receipt.json  expense_receipt.py
bookingzone/doctype/inventory_count/: inventory_count.json  inventory_count.py
bookingzone/doctype/inventory_count_item/: inventory_count_item.json
bookingzone/doctype/par_level/: par_level.json  par_level.py
bookingzone/doctype/payment_gateway_configuration/: payment_gateway_configuration.json
bookingzone/doctype/payment_transaction/: payment_transaction.json  payment_transaction.py
bookingzone/doctype/prime_cost_report/: prime_cost_report.json  prime_cost_report.py
bookingzone/doctype/recipe/: recipe.json  recipe.py
bookingzone/doctype/recipe_ingredient/: recipe_ingredient.json
bookingzone/services/: ocr_service.py  payment_service.py  pos_payment_integration.py
scooterbug/: hooks.py
scooterbug_erpnext/: hooks.py  install.py  modules.txt  patches.txt  permissions.py  tasks.py
scooterbug_erpnext/api/: __init__.py  booking.py  checkinout.py
scooterbug_erpnext/doctype/: __init__.py
scooterbug_erpnext/scooterbug/: __init__.py
scooterbug_erpnext/scooterbug_erpnext/: __init__.py
(+71 files in other folders)
