[project]
name = "scooterbug_erpnext"
version = "1.0.0"
description = "ScooterBug Equipment Rental Management for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "BookingZone", email = "ryanw@bookingzone.com" }
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "scooterbug_erpnext"
