[project]
name = "scooterbug_erpnext"
version = "1.0.0"
description = "ScooterBug Equipment Rental Management for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "BookingZone", email = "ryanw@bookingzone.com" }
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scooterbug_erpnext"]
include-package-data = true
